Fix z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,5 @@ p {
   position: absolute;
   bottom: 20px;
   right: 20px;
+  z-index: 10;
 }
